--- a/composer.json
+++ b/composer.json
@@ -31,13 +31,11 @@
         "bk2k/bootstrap-package": "dev-master",
         "typo3/cms-data-handling": "dev-master",
         "h4ck3r31/bank-account-example": "dev-master",
-        "league/tactician": "^1.0",
         "helhum/typo3-console": "^3.4"
     },
     "require-dev": {
         "phpunit/phpunit": "^5.4",
-        "mikey179/vfsStream": "~1.6.0",
-        "dbellettini/eventstore-client": "dev-master"
+        "mikey179/vfsStream": "~1.6.0"
     },
     "autoload-dev": {
         "psr-4": {
